fix layout issue horizontal tablet layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,6 +574,8 @@ button.btn-city {
   }
   .bottom-text-final {
     margin-right: 2vw;
+    height: 8vh;
+    margin-top: 0;
   }
   .lets-play-final {
     font-size: 3vmin;
@@ -585,6 +587,9 @@ button.btn-city {
   }
   #map {
     height: 20vh;
+  }
+  .map {
+      height: 22vh;
   }
   .top-final {
     margin-bottom: 2vh;
